# midi_melody_gui

./: Cargo.toml
src/: lib.rs  main.rs  melody_renderer.rs  recorder.rs
